Update register module and index UI

--- a/src/register.html
+++ b/src/register.html
@@ -20,7 +20,7 @@
     <!-- Global components -->
     <script src="./components/errorOverlay.js"></script>
     <!-- Page JS -->
-    <script src="./components/register.js"></script>
+    <script src="./page/register.js"></script>
 
     
 </body>
