Update homepage logic

--- a/src/index.html
+++ b/src/index.html
@@ -45,40 +45,41 @@
         <div class="category-container">
             <h1 class="title-text">Category</h1>
             <div class="category-list">
-                <div class="category-card">
+                <a href="/earth-hero/src/shop.html?category=Home%20%26%20Kitchen" class="category-card">
                     <i class="fa-solid fa-kitchen-set"></i>
                     <p class="category-name">Home & Kitchen</p>
-                </div>
-                <div class="category-card">
+                </a>
+                <a href="/earth-hero/src/shop.html?category=Cloth%20%26%20Accessories" class="category-card">
                     <i class="fa-solid fa-shirt"></i>
                     <p class="category-name">Cloth & Accessories</p>
-                </div>
-                <div class="category-card">
+                </a>
+                <a href="/earth-hero/src/shop.html?category=Beauty%20%26%20Personal%20Care" class="category-card">
                     <i class="fa-solid fa-paintbrush"></i>
                     <p class="category-name">Beauty & Personal Care</p>
-                </div>
-                <div class="category-card">
+                </a>
+                <a href="/earth-hero/src/shop.html?category=Health%20%26%20Wellness" class="category-card">
                     <i class="fa-solid fa-prescription-bottle-medical"></i>
                     <p class="category-name">Health & Wellness</p>
-                </div>
-                <div class="category-card">
+                </a>
+                <a href="/earth-hero/src/shop.html?category=Food%20%26%20Beverages" class="category-card">
                     <i class="fa-solid fa-utensils"></i>
                     <p class="category-name">Food & Beverages</p>
-                </div>
-                <div class="category-card">
+                </a>
+                <a href="/earth-hero/src/shop.html?category=Electronics%20%26%20Gadgets" class="category-card">
                     <i class="fa-solid fa-computer"></i>
                     <p class="category-name">Electronics & Gadgets</p>
-                </div>
-                <div class="category-card">
+                </a>
+                <a href="/earth-hero/src/shop.html?category=Garden%20%26%20Outdoor" class="category-card">
                     <i class="fa-solid fa-seedling"></i>
                     <p class="category-name">Garden & Outdoor</p>
-                </div>
-                <div class="category-card">
+                </a>
+                <a href="/earth-hero/src/shop.html?category=Kids%20%26%20Pets%20Essentials" class="category-card">
                     <i class="fa-solid fa-bone"></i>
                     <p class="category-name">Kids & Pets Essentials</p>
-                </div>
+                </a>
             </div>
         </div>
+
 
         <!-- New Arrivals -->
         <div class="new-arrivals-container">
