--- a/src/profile.html
+++ b/src/profile.html
@@ -35,6 +35,7 @@
 <script src="./components/siteHeader.js?v=1.0"></script>
 <script src="./components/searchBar.js?v=1.0"></script>
 <script src="./components/siteFooter.js?v=1.0"></script>
+<script src="./components/overlay.js"></script>
 <!-- Page JS -->
 <script src="./page/profile.js"></script>   
 </body>
