Modify cart list

--- a/src/cart.html
+++ b/src/cart.html
@@ -19,10 +19,9 @@
     <main class="app-container">
         <!-- Search Bar -->
         <div id="search-bar"></div>
+        <div id="cart-container"></div>
     </main>
-
-    <div id="shop-container"></div>
-
+    
     <!-- Site footer -->
     <div id="footer-container"></div>
 
@@ -36,6 +35,6 @@
 <script src="./components/overlay.js"></script>
 <script src="./components/productCard.js"></script>
 <!-- Page JS -->
-<script src="./page/shop.js"></script>   
+<script src="./page/cart.js"></script>   
 </body>
 </html>
