--- a/src/index.html
+++ b/src/index.html
@@ -277,6 +277,7 @@
 <script src="./components/searchBar.js?v=1.0"></script>
 <script src="./components/siteFooter.js?v=1.0"></script>
 <script src="./components/productCard.js?v=1.0"></script>
+<script src="./components/overlay.js?v=1.0"></script>
 <!-- Page JS -->
 <script src="./page/home.js?v=1.0"></script>   
 </body>
