--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+    <p class="web-disclaimer">By Group CS-4567 | TMS3853 | This application is part of a coursework project and refers to the EarthHero website. It is not a real, live website.</p>
     <div id="admin-app"></div>
 
     <script type="module" src="./components/admin/adminDashboard.js"></script>
