--- a/src/purchase.html
+++ b/src/purchase.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+    <p class="web-disclaimer">By Group CS-4567 | TMS3853 | This application is part of a coursework project and refers to the EarthHero website. It is not a real, live website.</p>
     <!-- Site header -->
     <div id="header-container"></div>
     
